<resources>
    <string name="app_name">canteenApp</string>
    <string name="password">password</string>
    <string name="email_id">Email id</string>
    <string name="hello">hello</string>
    <string name="enterName" />
    <string name="name">name</string>
    <string name="register">register</string>
    <string name="title_activity_choose_option">ChooseOption</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="vlaunge">Vlaunge</string>
    <string name="user_name">User Name</string>
    <string name="VCanteen">VCanteen</string>
    <string name="loginId">loginId</string>
    <string name="login">login...!!</string>
    <string name="logout">logout</string>
    <string name="chase_the_flavours">Chase The Flavours</string>

    <string name="title_activity_verify_here">VerifyHere</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
