<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.canteenapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.canteenapp.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_yourOrders"
        android:name="com.example.canteenapp.ui.your_orders.YourOrdersFragment"
        android:label="Your Orders"
        tools:layout="@layout/fragment_your_orders" />



    <fragment
        android:id="@+id/logout"
        android:label="@string/menu_slideshow"
        android:name="com.example.canteenapp.ui.slideshow.SlideshowFragment"
        tools:layout="@layout/activity_login_account" />


    <fragment
        android:id="@+id/SearchFragmentID"
        android:name="com.example.canteenapp.SearchFragment"
        android:label="Search"
        tools:layout="@layout/search_fragment_layout" />
    <fragment
        android:id="@+id/cart_fragment"
        android:name="com.example.canteenapp.Cart_fragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart_fragment" />

</navigation>